# bpa_toolkit

./: .gitignore  Dockerfile  pyproject.toml
scripts/: gen_dirty_data.py  gen_inventory_data.py  gen_mock_recon.py
src/: analysis_sql.py  api_client.py  app.py  cleaner.py  config.py  create_template.py  js_practice.js  main.py  mock_reconciliation.py  poison_data.py  recon_bot.py
src/core/: cleaner.py  excel_injector.py  grid_builder.py
src/pages/: 2_Reconciliation.py  3_Analytics.py  4_Supply_Chain.py  Data_Factory.py
src/services/: bba_etl.py  charts.py  recon_bot.py
